@@ -7,6 +7,8 @@
 # This program is distributed in the hope that it will be useful, but
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+#
+# $Id$
 
 #EXTRA_DIST = reconf configure
 SUBDIRS = src tests doc
