@@ -1,7 +1,11 @@
+# Copyright (c) 2007 Codership Oy <info@codership.com>
+#
+# $Id$
+#
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
-AC_INIT(galerautils, 0.2.6, [info@codership.com])
+AC_INIT(galerautils, 0.2.7, [info@codership.com])
 AC_CONFIG_SRCDIR([src/gu_mutex.c])
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE
