@@ -1,4 +1,7 @@
 # Copyright (C) 2007 Codership Oy <info@codership.com>
+#
+# $Id$
+
 # Initialize AM_CFLAGS to empty. 
 #AM_CFLAGS =
 #if ENABLE_DEBUG
@@ -16,6 +19,7 @@ include_HEADERS =      \
 	gu_mutex.h     \
 	gu_conf.h      \
 	gu_dbug.h      \
+	gu_time.h      \
 	gu_byteswap.h
 
 lib_LTLIBRARIES = libgalerautils.la
@@ -26,9 +30,9 @@ libgalerautils_la_SOURCES = \
 	gu_mutex.c \
 	gu_dbug.c
 
-INTERFACE = 3
-REVISION  = 3
-AGE       = 2
+INTERFACE = 4
+REVISION  = 0
+AGE       = 3
 libgalerautils_la_LDFLAGS = \
 	-version-info $(INTERFACE):$(REVISION):$(AGE)
 
