@@ -3,7 +3,7 @@
 /**
  * @file GaleraUtils main header file
  *
- * $ Id: $
+ * $Id$
  */
 
 #ifndef _galerautils_h_
@@ -30,6 +30,14 @@
 
 #define gu_offsetof(TYPE, MEMBER) ((size_t) &((TYPE *)0)->MEMBER)
 
+#if __GNUC__ >= 3
+#define gu_likely(x)   __builtin_expect((x), 1)
+#define gu_unlikely(x) __builtin_expect((x), 0)
+#else
+#define gu_likely(x)   (x)
+#define gu_unlikely(x) (x)
+#endif
+
 #include "gu_log.h"
 #include "gu_assert.h"
 #include "gu_mem.h"
@@ -37,5 +45,6 @@
 #include "gu_conf.h"
 #include "gu_dbug.h"
 #include "gu_byteswap.h"
+#include "gu_time.h"
 
 #endif /* _galerautils_h_ */
