@@ -1,5 +1,7 @@
 // Copyright (C) 2007 Codership Oy <info@codership.com>
 
+// $Id$
+
 #ifndef __gu_bswap_test__
 #define __gu_bswap_test__
 
