@@ -1,0 +1,10 @@
+// Copyright (C) 2007 Codership Oy <info@codership.com>
+
+// $Id$
+
+#ifndef __gu_time_test__
+#define __gu_time_test__
+
+Suite *gu_time_suite(void);
+
+#endif /* __gu_time_test__ */
